--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "infyomlabs/adminlte-templates": "^2.0",
         "infyomlabs/laravel-generator": "7.0.x-dev",
         "laravel/framework": "^7.0",
+        "laravel/passport": "~9.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.1",
